--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=iGainsJ
+spring.datasource.url=jdbc:postgresql://localhost:5432/iGainsJava
+spring.datasource.username=postgres
+spring.datasource.password=pyawesome31
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+jwt.expiration=86400000
+jwt.secret=aH7dFb3Kg6Jm9Pc2Zq5Ws8Ve1Tf4Qh5Tp0Yl3Xv6Ra9Mc2
