--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=pyawesome31
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-jwt.expiration=86400000
+jwt.lifetime=86400000
 jwt.secret=aH7dFb3Kg6Jm9Pc2Zq5Ws8Ve1Tf4Qh5Tp0Yl3Xv6Ra9Mc2
