--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
 			<version>0.12.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.2.0</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
